--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <!-- stylesheet -->
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="style.css">
+
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 </head>
@@ -26,11 +27,17 @@
 
 <!-- hero image -->
 	<section class="hero">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 		<h1>Hi, I'm Imani.</h1>
-		<p> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for building satisfying<br>user experiences.</p>
+		<h4> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for building satisfying<br>user experiences.</h4>
     <a href="about-me.html" class="button">About me</a>
     <a href="#main" class="button">My work</a><br>
-    <i class="fas fa-angle-double-down fa-3x"></i>
+    <i class="fas fa-angle-double-down fa-2x"></i>
   </section>
 
   <div class="main">
@@ -68,41 +75,50 @@
         <img src="images/iphone4.png" alt="busybus mockup photo" width="370" height="370">
         </aside>
       <section class="design_process">
+          <br>
+          <br>
+          <br>
+          <br>
           <h3>My Design Process</h3>
+          <aside class="designpic">
           <img class="design" src="images/designblock.svg" alt="design process image" width="600" height="68">
+           </aside>
       </section>
+     </div>
       <!-- testimonials -->
+
       <div class="slider">
         <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
         <input type="radio" name="slider" title="slide2" class="slider__nav"/>
         <input type="radio" name="slider" title="slide3" class="slider__nav"/>
         <input type="radio" name="slider" title="slide4" class="slider__nav"/>
         <div class="slider__inner">
-          <div class="slider__contents"><i class="slider__image fa fa-codepen"></i>
+          <div class="slider__contents">
             <h2 class="slider__caption">codepen</h2>
             <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
           </div>
-          <div class="slider__contents"><i class="slider__image fa fa-newspaper-o"></i>
+          <div class="slider__contents">
             <h2 class="slider__caption">newspaper-o</h2>
             <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
           </div>
-          <div class="slider__contents"><i class="slider__image fa fa-television"></i>
+          <div class="slider__contents">
             <h2 class="slider__caption">television</h2>
             <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
           </div>
-          <div class="slider__contents"><i class="slider__image fa fa-diamond"></i>
+          <div class="slider__contents">
             <h2 class="slider__caption">diamond</h2>
             <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
           </div>
         </div>
       </div>
-  </div>
+
  <!-- connect with me -->
      <section class="connect">
       <h3>Connect with me:</h3>
       <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
       <a href="/contact.html" class="button">Message me</a>
     </section>
+
     <!-- footer -->
       <footer>
         <ul class="socialmedia">
