--- a/about-me.html
+++ b/about-me.html
@@ -18,24 +18,37 @@
 <!-- nav bar -->
       <ul class="main-navbar">
         <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></li>
-        <li><a id="contact_nav" href="/contact.html">Contact</a></li>
-        <li><a href="/about-me.html">About</a></li>
+        <li><a id="contact_nav" href="contact.html">Contact</a></li>
+        <li><a href="about-me.html">About</a></li>
         <li><a href="index.html">Work</a></li>
       </ul>
    </nav>
 
 <!-- hero image -->
-	<section class="hero">
-		<h1>About Me</h1>
-    <img class="me" src="images/me.svg" alt="picture of author" width="550" height="550">
-		<p>Suseong Lake, South Korea</p>
-  </section>
-
+  <div id="hero">
+	  <section class="hero">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+		  <h1>About Me</h1>
+      <img class="me" src="images/me.svg" alt="picture of author" width="600" height="650">
+	 	  <h4>Suseong Lake, South Korea</h4>
+     </section>
+   </div>
   <div class="main">
     <p>
-      The first time I heard about UX design, it was in reference to human-computer interaction during a lecture in the Psychology hall of Appalachian State University. The professor referenced a study researchers conducted on the warning systems in airplanes that alerted pilots that they were flying too close to the ground. These researchers found that the alert was far more effective if it stated “Pull Up” rather than “Ground Proximity”. This seemingly simple change in the design of these warning systems, based on user preferences, changed the airline industry forever.<br><br>This story has stuck with me as I’ve always been cognizant of how changes in design can greatly improve the human condition. Prior to making the decision to pursue UX design, and after graduating with my degree in Psychology,  I devoted my time to working on the front lines of the food service, education and mental health industries. I’ve held a variety of positions, including: a manager of a restaurant, a server, an English teacher, a social worker and a school-based therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I stumbled into UX Design when I was struck by the fact that those I worked with were being asked to use systems that were impractical for the tasks at hand. I began thinking back to the other jobs I’d held and the frustrations met in each. I thought about the technology that had both customers and employees frustrated and exhausted. Despite the numerous trainings provided, the issue was that these applications, these products weren’t user friendly. That’s when I knew that I wanted to make designs for those in the trenches of our most vital industries.That’s when I knew I wanted to advocate for the user experience. My goal as a UX designer is to use my passion to solve problems in a creative and empathetic way.
-    </p>
-    <h3>My Skills:</h3>
+      The first time I heard about UX design, it was in reference to human-computer interaction during a lecture in the Psychology hall of Appalachian State University.<blockquote> The professor referenced a study researchers conducted on the warning systems
+        in airplanes that alerted pilots that they were flying too close to the ground. These researchers found that the alert was far more effective if it stated “Pull Up” rather than “Ground Proximity”. This seemingly simple change in the design of these warning
+         systems, based on user preferences, changed the airline industry forever.<p/></blockquote>
+         <p>This story has stuck with me as I’ve always been cognizant of how changes in design can greatly improve the human condition. Prior to making the decision to pursue UX design,
+          and after graduating with my degree in Psychology,  I devoted my time to working on the front lines of the food service, education and mental health industries. I’ve held a variety of positions, including: a manager of a restaurant, a server, an English
+          teacher, a social worker and a school-based therapist. My decision to pursue these careers was driven by a desire to help those around me in a meaningful way.<br><br>I stumbled into UX Design when I was struck by the fact that those I worked with were being
+          asked to use systems that were impractical for the tasks at hand. I began thinking back to the other jobs I’d held and the frustrations met in each. I thought about the technology that had both customers and employees frustrated and exhausted. Despite the numerous
+           trainings provided, the issue was that these applications, these products weren’t user friendly. That’s when I knew that I wanted to make designs for those in the trenches of our most vital industries.That’s when I knew I wanted to advocate for the user experience.
+           My goal as a UX designer is to use my passion to solve problems in a creative and empathetic way.</p>
+    <h2>My Skills:</h2>
     <ul>
       <li>Surveys</li>
       <li>Persona building</li>
@@ -47,7 +60,7 @@
       <li>JavaScript</li>
       <li>CSS3</li>
     </ul>
-    <h3>My Favorite Tools:</h3>
+    <h2>My Favorite Tools:</h2>
     <ul>
       <li>Figma</li>
       <li>InVision Studio</li>
