--- a/contact.html
+++ b/contact.html
@@ -11,29 +11,43 @@
 </head>
 
 <body>
-<div id="form-main">
-  <div id="form-div">
-    <form class="form" id="form1">
+  <nav class="navbar">
+<!-- nav bar -->
+      <ul class="main-navbar">
+        <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></li>
+        <li><a id="contact_nav" href="contact.html">Contact</a></li>
+        <li><a href="about-me.html">About</a></li>
+        <li><a href="index.html">Work</a></li>
+      </ul>
+   </nav>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <div id="form-main">
+     <div id="form-div">
+       <form class="form" id="form1">
 
-      <p class="name">
-        <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
-      </p>
+         <p class="name">
+           <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
+         </p>
 
-      <p class="email">
+         <p class="email">
         <input name="email" type="text" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email" />
-      </p>
+        </p>
 
-      <p class="text">
-        <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
-      </p>
+        <p class="text">
+          <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
+        </p>
 
 
-      <div class="submit">
-        <input type="submit" value="SEND" id="button-blue"/>
-        <div class="ease"></div>
-      </div>
-    </form>
+        <div class="submit">
+          <input type="submit" value="SEND" id="button-blue"/>
+          <div class="ease"></div>
+        </div>
+      </form>
+    </div>
   </div>
- </div>
- </body>
-</html>
+  </body>
+  </html>
