--- a/project.html
+++ b/project.html
@@ -18,8 +18,8 @@
 <!-- nav bar -->
       <ul class="main-navbar">
         <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></li>
-        <li><a id="contact_nav" href="/contact.html">Contact</a></li>
-        <li><a href="/about-me.html">About</a></li>
+        <li><a id="contact_nav" href="contact.html">Contact</a></li>
+        <li><a href="about-me.html">About</a></li>
         <li><a href="index.html">Work</a></li>
       </ul>
    </nav>
@@ -27,9 +27,9 @@
   <section class="hero">
     <!-- start case study -->
     <h1>Trove</h1>
+    <img class="hero" src="images/troveblue.png" alt="trove mockup image" class="center" width="370" height="370">
     <p>Trove is a cloud storage application that combines<br> storage and organization with real-time<br> collaboration.<p>
-    <img class="hero" src="images/troveblue.png" alt="trove mockup image" width="370" height="370">
-    <a href="" target="_blank" class="button">View finished prototype</a>
+    <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
   </section>
     <!-- summary and solution-->
   <div class="main">
@@ -44,15 +44,15 @@
      </section>
     <section class="solution">
       <h2>The Solution:</h2>
-      <img src="images/trovemockup.png" alt="trove mockup" width="575" height="475">
+      <img src="images/trovemockup.png" alt="trove mockup" class="center" width="575" height="475">
     </section>
     <!-- discovery -->
     <section class="discovery">
       <h2>Discovery Phase:</h2>
       <p>Before beginning the design process, I needed to gather information about how users felt about their current cloud application, the way they use them, and the features they would most like to see in future applications.</p>
-        <a href="" target="_blank" class="button">View more</a>
         <aside>
-        <img class="survey" src="images/trovesurvey.png" alt="user survey image" width="510" height="200">
+        <img src="images/trovesurvey.png" alt="user survey image" class="center" width="510" height="200">
+        <a href="https://docs.google.com/spreadsheets/d/10zVRX0QJES3QO5b5i8qLSpEJfG0i6YERuytIaujhMF0/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
     <section>
@@ -60,15 +60,16 @@
         <p>Google Drive:<br> Google has many products to offer its users through its Drive platform. They have built-in templates for surveys, documents, spreadsheets,  and presentations. They also provide several tools for users to edit content with.
         <br>Dropbox:<br> Dropbox is available on multiple platforms, IOS, Android, and Office 365 applications. The application also has the option of administration control for business users.<br>Pinterest:<br> Pinterest allows users to “Pin”
          images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless scrolling of interests the user choses. </p>
-          <img src="images/googledrivre.png" alt="google drive image" width="1050" height="500"><br>
-          <img src="images/dropbox.png" alt="dropbox image" width="1050" height="500"><br>
-          <img src="images/pinterest.png" alt="pinterest image" width="1055" height="500"><br>
+          <img src="images/googledrivre.png"  alt="google drive image" class="center" width="750" height="300"><br>
+          <img src="images/dropbox.png"  alt="dropbox image" class="center" width="750" height="300"><br>
+          <img src="images/pinterest.png"  alt="pinterest image" class="center" width="755" height="300"><br>
+          <a href="https://docs.google.com/document/d/1xJg4TUPONXPYxAXBafxe4DKsNYSO1RyiBYnhi0jO21c/edit?usp=sharing" target="_blank" class="button">View more</a>
      </section>
     <section>
       <h2>User Personas:</h2>
-        <img src="images/user1.png" alt="user persona image">
+        <img src="images/user1.png" alt="user persona image" class="center" width="600" height="400">
         <p>The first user persona represents a user who is interested in using the application for work related activities, for example sharing content and ideas with colleagues</p>
-        <img src="images/user2.png" alt="user persona image">
+        <img src="images/user2.png" alt="user persona image" class="center" width="600" height="400">
         <p>The second user persona represents a user who uses our application for school and personal use. This user is invested in collaborating with classmates, group mates, and friends. </p>
        </section>
     <!-- info architecture -->
@@ -76,31 +77,31 @@
       <h2>Information Architecture:</h2>
       <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories based off the data from the user survey responses, the competitive analysis and the user personas.
         I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.</p>
-      <img src="images/userstories.png" alt="user stories image" width="508" height="335">
+      <img src="images/userstories.png" alt="user stories image" class="center" width="508" height="335">
+      <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
      </section>
     <section>
       <h2>User Flows:</h2>
-        <img src="images/userflow1.png" alt="user flows image" width="200" height="343">
-        <img src="images/userflow2.png" alt="user flows image" width="188" height="335">
-        <img src="images/userflow3.png" alt="user flows image" width="233" height="343">
+        <img src="images/userflow1.png" alt="user flows image" class="user" width="200" height="343">
+        <img src="images/userflow2.png" alt="user flows image" class="user" width="188" height="335">
+        <img src="images/userflow3.png" alt="user flows image" class="user" width="233" height="343">
+        <a href="https://paper.dropbox.com/doc/User-Flows-2--AzATkSmnmO6PDH21JKlk~FRZAQ-hAYhkSMHhNcfglCncnUa8" target="_blank" class="button">View more</a>
       </section>
     <section class="wireframes">
       <h2>Wireframes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to mockup what I would like my final application to look like. </p>
-      <img src="images/wireframe1.png" alt="wireframe image" width="300" height="221">
-      <img src="images/wireframe2.png" alt="wireframe image" width="333" height="221">
-      <img src="images/wireframe3.png" alt="wireframe image" width="310" height="221"><br>
-      <a href="" target="_blank" class="button">View more</a>
+      <img src="images/wireframe2.png" alt="wireframe image" class="center" width="400" height="300">
+      <a href="https://invis.io/4UWRY15XM9Q" target="_blank" class="button">View more</a>
        </section>
     <section>
       <h2>Branding and Identity:</h2>
       <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. We started by thinking of the consumer’s content as actual treasure. This helped
          create the concept of the treasure chest.<br>Brand mood: New, bright, creative, clean and crisp.</p>
-      <img src="images/trovesketch.png" alt="trove sketches" width="250" height="303">
+      <img src="images/trovesketch.png" alt="trove sketches" class="center" width="250" height="303">
       <p>Once I knew I wanted to go in a treasure chest/nautical theme, I started to gather inspiration from around the web. Colors that are featured in the mood board (brown, orange, gold, blue
          and teal) were the foundational pieces for the finished app.</p>
-      <img src="images/moodboard1.png" alt="trove moodboard" width="412" height="350">
-      <img src="images/moodboard2.png" alt="trove moodboard" width="412" height="350">
+      <img src="images/moodboard1.png" alt="trove moodboard" class="mood" width="600" height="450">
+      <img src="images/moodboard2.png" alt="trove moodboard" class="mood" width="600" height="450">
        </section>
     <section>
       <h2>Usability Tests:</h2>
@@ -111,10 +112,8 @@
     <section class="mockups">
       <h2>Mockups:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="images/mockup1.png" alt="mockup image" width="300" height="213">
-      <img src="images/mockup2.png" alt="mockup image" width="300" height="213">
-      <img src="images/mockup3.png" alt="mockup image" width="300" height="213"><br>
-      <a href="" target="_blank" class="button">View more</a>
+      <img src="images/mockup1.png" alt="mockup image" class="center" width="600" height="470">
+      <a href="https://invis.io/NCW1U5L2J8B" target="_blank" class="button">View more</a>
        </section>
     <section>
       <h2>Usability Tests:</h2>
@@ -123,7 +122,7 @@
     <section>
       <h2>Preference Tests:</h2>
       <p>I conducted a preference test for three different elements in my design.83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
-      <img src="images/surveygraph.png" alt="preference graph" width="248" height="248">
+      <img src="images/surveygraph.png" alt="preference graph" class="center" width="248" height="248">
       </section>
     <!-- final project -->
     <section>
