--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+ <div class="container">
   <nav class="navbar">
 <!-- nav bar -->
       <ul class="main-navbar">
@@ -26,23 +26,22 @@
    </nav>
 
 <!-- hero image -->
-	<section class="hero">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-		<h1>Hi, I'm Imani.</h1>
-		<h4> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for building satisfying<br>user experiences.</h4>
-    <a href="about-me.html" class="button">About me</a>
-    <a href="#main" class="button">My work</a><br>
-    <i class="fas fa-angle-double-down fa-2x"></i>
-  </section>
-
-  <div class="main">
-  <!-- main content -->
-      <aside class="cap">
+	 <section class="hero">
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+		   <h1>Hi, I'm Imani.</h1>
+		     <h4> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for building satisfying<br>user experiences.</h4>
+         <a href="about-me.html" class="button">About me</a>
+         <a href="#main" class="button">My work</a><br>
+         <i class="fas fa-angle-double-down fa-2x"></i>
+       </section>
+       <div class="flex-container">
+    <!-- main content -->
+        <aside class="cap">
         <img src="images/iphone1.png" alt="capstone project mockup photo" width="370" height="370">
         </aside>
       <section class="capstone_project">
@@ -74,17 +73,19 @@
       <aside class="busy">
         <img src="images/iphone4.png" alt="busybus mockup photo" width="370" height="370">
         </aside>
+      </div>
       <section class="design_process">
           <br>
           <br>
           <br>
           <br>
           <h3>My Design Process</h3>
+
           <aside class="designpic">
-          <img class="design" src="images/designblock.svg" alt="design process image" width="600" height="68">
+          <img class="design" src="images/designprocess.svg" alt="design process image" width="700" height="500">
            </aside>
       </section>
-     </div>
+
       <!-- testimonials -->
 
       <div class="slider">
@@ -128,6 +129,7 @@
          <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
         </ul>
       </footer>
+    </div>
     </body>
 
     </html>
