--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+  <div class="container">
   <nav class="navbar">
 <!-- nav bar -->
       <ul class="main-navbar">
@@ -147,6 +147,7 @@
        <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
       </ul>
     </footer>
+  </div>
   </body>
 
   </html>
