--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+ <div class="container">
   <nav class="navbar">
 <!-- nav bar -->
       <ul class="main-navbar">
@@ -85,6 +85,8 @@
          <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
         </ul>
       </footer>
+    </div>
+
     </body>
 
     </html>
