--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div class="container">
   <nav class="navbar">
 <!-- nav bar -->
       <ul class="main-navbar">
@@ -49,5 +50,6 @@
       </form>
     </div>
   </div>
+</div>
   </body>
   </html>
