--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <div class="container">
   <nav class="navbar">
 <!-- nav bar -->
-      <ul class="main-navbar">
+    <ul class="main-navbar">
         <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></li>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a href="/about-me.html">About</a></li>
@@ -39,10 +39,10 @@
          <a href="#main" class="button">My work</a><br>
          <i class="fas fa-angle-double-down fa-2x"></i>
        </section>
-       <div class="flex-container">
+    <div class="main">
     <!-- main content -->
         <aside class="cap">
-        <img src="images/iphone1.png" alt="capstone project mockup photo" width="370" height="370">
+        <img src="images/iphone1.png" class="cappic" alt="capstone project mockup photo" width="370" height="370">
         </aside>
       <section class="capstone_project">
           <h3>Capstone Project</h3>
@@ -53,13 +53,13 @@
           <h3>Trove Project</h3>
           <p>This is the cloud storage project I created.</p>
           <a href="/project.html" target="_blank" class="button">Case study</a>
-      </section>
-        <aside class="trove">
-          <img src="images/iphone2.png" alt="trove mockup photo" width="370" height="370">
+            </section>
+          <aside class="trove">
+            <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo" width="370" height="370">
           </aside>
-      <aside class="bloc">
-        <img src="images/iphone3.png" alt="bloc jams project mockup photo" width="370" height="370">
-        </aside>
+        <aside class="bloc">
+         <img src="images/iphone3.png" class="blocpic" alt="bloc jams project mockup photo" width="370" height="370">
+       </aside>
       <section class="blocjams_project">
           <h3>Bloc Jams Project</h3>
           <p>This is the music player application I created.</p>
@@ -71,9 +71,10 @@
           <a href="" target="_blank" class="button">Case study</a>
       </section>
       <aside class="busy">
-        <img src="images/iphone4.png" alt="busybus mockup photo" width="370" height="370">
+        <img src="images/iphone4.png" class="busypic" alt="busybus mockup photo" width="370" height="370">
         </aside>
       </div>
+     <!-- designprocess -->
       <section class="design_process">
           <br>
           <br>
@@ -114,7 +115,7 @@
       </div>
 
  <!-- connect with me -->
-     <section class="connect">
+   <section class="connect">
       <h3>Connect with me:</h3>
       <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
       <a href="/contact.html" class="button">Message me</a>
