--- a/project.html
+++ b/project.html
@@ -13,11 +13,13 @@
 </head>
 
 <body>
+
   <div class="container">
+
+  <!-- nav bar -->
   <nav class="navbar">
-<!-- nav bar -->
-      <ul class="main-navbar">
-        <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></li>
+       <ul class="main-navbar">
+        <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></a></li>
         <li><a id="contact_nav" href="contact.html">Contact</a></li>
         <li><a href="about-me.html">About</a></li>
         <li><a href="index.html">Work</a></li>
@@ -35,6 +37,7 @@
     <p>Trove is a cloud storage application that combines<br> storage and organization with real-time<br> collaboration.<p>
     <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
   </section>
+
     <!-- summary and solution-->
   <div class="main">
     <section class="summary">
@@ -76,6 +79,7 @@
         <img src="images/user2.png" alt="user persona image" class="center" width="600" height="400">
         <p>The second user persona represents a user who uses our application for school and personal use. This user is invested in collaborating with classmates, group mates, and friends. </p>
        </section>
+
     <!-- info architecture -->
     <section>
       <h2>Information Architecture:</h2>
@@ -94,7 +98,7 @@
     <section class="wireframes">
       <h2>Wireframes:</h2>
       <p>Combining information from my competitive analysis and my user surveys, I was able to mockup what I would like my final application to look like. </p>
-      <img src="images/wireframe2.png" alt="wireframe image" class="center" width="400" height="300">
+      <img src="images/wireframe2.png" alt="wireframe image" class="wireframeimage" width="400" height="300">
       <a href="https://invis.io/4UWRY15XM9Q" target="_blank" class="button">View more</a>
        </section>
     <section>
@@ -116,7 +120,7 @@
     <section class="mockups">
       <h2>Mockups:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="images/mockup1.png" alt="mockup image" class="center" width="600" height="470">
+      <img src="images/mockup1.png" alt="mockup image" class="mockupimage" width="600" height="470">
       <a href="https://invis.io/NCW1U5L2J8B" target="_blank" class="button">View more</a>
        </section>
     <section>
@@ -128,6 +132,7 @@
       <p>I conducted a preference test for three different elements in my design.83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
       <img src="images/surveygraph.png" alt="preference graph" class="center" width="248" height="248">
       </section>
+
     <!-- final project -->
     <section>
       <h2>Conclusion:</h2>
@@ -137,11 +142,12 @@
     </div>
 
     <!-- connect with me -->
-        <section class="connect">
+      <section class="connect">
          <h3>Connect with me:</h3>
          <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
+
     <!-- footer -->
     <footer>
       <ul class="socialmedia">
@@ -152,6 +158,7 @@
       </ul>
     </footer>
   </div>
-  </body>
 
-  </html>
+ </body>
+
+</html>
