--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Imani Ricks | Contact</title>
 <!-- stylesheet -->
-<link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="contact.css">
+<link rel="stylesheet" type="text/css" href="reset.css">
+<link rel="stylesheet" type="text/css" href="contact.css">
 </head>
 
 <body>
