--- a/project.html
+++ b/project.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
-<link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="project.css">
+<link rel="stylesheet" type="text/css" href="reset.css">
+<link rel="stylesheet" type="text/css" href="project.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 </head>
