--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
       <section class="blocjams_project">
           <h3>Bloc Jams Project</h3>
           <p>This is the music player application I created.</p>
-          <a href="" target="_blank" class="button">Case study</a>
+          <a href="" target="_blank" class="button">View</a>
       </section>
       <section class="busybus_project">
           <h3>Busy Bus Project</h3>
           <p>This is the transportation application I created.</p>
-          <a href="" target="_blank" class="button">Case study</a>
+          <a href="" target="_blank" class="button">View</a>
       </section>
       <aside class="busy">
         <img src="images/iphone4.png" class="busypic" alt="busybus mockup photo" width="370" height="370">
@@ -85,8 +85,6 @@
       </div>
      <!-- designprocess -->
       <section class="design_process">
-          <br>
-          <br>
           <br>
           <br>
           <h3>My Design Process</h3>
@@ -97,7 +95,8 @@
       </section>
 
       <!-- testimonials -->
-
+      <section class="testimonials">
+      <h3>What people say about me:</h3>
       <div class="slider">
         <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
         <input type="radio" name="slider" title="slide2" class="slider__nav"/>
@@ -122,7 +121,7 @@
           </div>
         </div>
       </div>
-
+  </section>
  <!-- connect with me -->
    <section class="connect">
       <h3>Connect with me:</h3>
@@ -138,6 +137,7 @@
          <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
          <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
         </ul>
+        <p>Designed and Developed by Imani Ricks 2020</p>
       </footer>
     </div>
     </body>
