--- a/project.html
+++ b/project.html
@@ -165,6 +165,7 @@
        <li><a href="https://www.linkedin.com/in/imani-ricks/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></li>
        <li><a href="https://dribbble.com/RRicks" target="_blank"><i class="fab fa-dribbble-square fa-2x"></i></a></li>
       </ul>
+      <p>Designed and Developed by Imani Ricks 2020</p>
     </footer>
   </div>
 
