--- a/about-me.html
+++ b/about-me.html
@@ -58,7 +58,7 @@
            trainings provided, the issue was that these applications, these products weren’t user friendly. That’s when I knew that I wanted to make designs for those in the trenches of our most vital industries.That’s when I knew I wanted to advocate for the user experience.
            My goal as a UX designer is to use my passion to solve problems in a creative and empathetic way.</p>
     <h2>My Skills:</h2>
-    <ul>
+    <ul class="skills">
       <li>Surveys</li>
       <li>Persona building</li>
       <li>Wireframing</li>
@@ -70,7 +70,7 @@
       <li>CSS3</li>
     </ul>
     <h2>My Favorite Tools:</h2>
-    <ul>
+    <ul class="tools">
       <li>Figma</li>
       <li>InVision Studio</li>
       <li>Git</li>
