--- a/about-me.html
+++ b/about-me.html
@@ -23,13 +23,13 @@
 
 <body>
  <div class="container">
+   <!-- nav bar -->
   <nav class="navbar">
-<!-- nav bar -->
-      <ul class="main-navbar">
-        <li><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></li>
-        <li><a id="contact_nav" href="contact.html">Contact</a></li>
-        <li><a href="about-me.html">About</a></li>
-        <li><a href="index.html">Work</a></li>
+      <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></a>
+    <ul>
+        <li><a id="contact_nav" href="/contact.html">Contact</a></li>
+        <li><a id="about_me" href="/about-me.html">About</a></li>
+        <li><a id="work" href="/index.html">Work</a></li>
       </ul>
    </nav>
 
