--- a/about-me.html
+++ b/about-me.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" type="text/css" href="about-me.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
+<!-- googlefonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Karla">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75461753-2"></script>
 <script>
@@ -25,7 +27,7 @@
  <div class="container">
    <!-- nav bar -->
   <nav class="navbar">
-      <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></a>
+      <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
@@ -42,7 +44,7 @@
       <br>
       <br>
 		  <h1>About Me</h1>
-      <img class="me" src="images/me.svg" alt="picture of author" width="600" height="650">
+      <img class="me" src="images/me.svg" alt="picture of author">
 	 	  <h4>Suseong Lake, South Korea</h4>
      </section>
    </div>
@@ -96,7 +98,6 @@
         <p>Designed and Developed by Imani Ricks 2020</p>
       </footer>
     </div>
-
     </body>
 
     </html>
