--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" href="reset.css">
 <link rel="stylesheet" type="text/css" href="style.css">
-
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
+<!-- googlefonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Karla">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75461753-2"></script>
 <script>
@@ -26,7 +27,7 @@
  <div class="container">
    <!-- nav bar -->
   <nav class="navbar">
-      <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo" width="50" height="50"></a>
+      <a href="/index.html"><img id="logo" src="images/dotlogo2.svg" alt="imani ricks logo"></a>
     <ul>
         <li><a id="contact_nav" href="/contact.html">Contact</a></li>
         <li><a id="about_me" href="/about-me.html">About</a></li>
@@ -51,9 +52,9 @@
     <div class="main">
     <!-- main content -->
         <aside class="cap">
-        <img src="images/iphone1.png" class="cappic" alt="capstone project mockup photo" width="370" height="370">
+        <img src="images/iphone1.png" class="cappic" alt="capstone project mockup photo">
         </aside>
-      <section class="capstone_project">
+        <section class="capstone_project">
           <h3>Capstone Project</h3>
           <p>This is a summary of my capstone project.</p>
           <a href="" target="_blank" class="button">Case study</a>
@@ -64,10 +65,10 @@
           <a href="/project.html" target="_blank" class="button">Case study</a>
             </section>
           <aside class="trove">
-            <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo" width="370" height="370">
+            <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo">
           </aside>
         <aside class="bloc">
-         <img src="images/iphone3.png" class="blocpic" alt="bloc jams project mockup photo" width="370" height="370">
+         <img src="images/iphone3.png" class="blocpic" alt="bloc jams project mockup photo">
        </aside>
       <section class="blocjams_project">
           <h3>Bloc Jams Project</h3>
@@ -80,7 +81,7 @@
           <a href="" target="_blank" class="button">View</a>
       </section>
       <aside class="busy">
-        <img src="images/iphone4.png" class="busypic" alt="busybus mockup photo" width="370" height="370">
+        <img src="images/iphone4.png" class="busypic" alt="busybus mockup photo">
         </aside>
       </div>
      <!-- designprocess -->
@@ -90,7 +91,7 @@
           <h3>My Design Process</h3>
 
           <aside class="designpic">
-          <img class="design" src="images/designprocess.svg" alt="design process image" width="700" height="500">
+          <img class="design" src="images/designprocess.svg" alt="design process image">
            </aside>
       </section>
 
@@ -104,20 +105,20 @@
         <input type="radio" name="slider" title="slide4" class="slider__nav"/>
         <div class="slider__inner">
           <div class="slider__contents">
-            <h2 class="slider__caption">codepen</h2>
-            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+            <h2 class="slider__caption">Testimonial</h2>
+            <p class="slider__txt">Coming Soon</p>
           </div>
           <div class="slider__contents">
-            <h2 class="slider__caption">newspaper-o</h2>
-            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+            <h2 class="slider__caption">Testimonial</h2>
+            <p class="slider__txt">Coming Soon</p>
           </div>
           <div class="slider__contents">
-            <h2 class="slider__caption">television</h2>
-            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+            <h2 class="slider__caption">Testimonial</h2>
+            <p class="slider__txt">Coming Soon</p>
           </div>
           <div class="slider__contents">
-            <h2 class="slider__caption">diamond</h2>
-            <p class="slider__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At cupiditate omnis possimus illo quos, corporis minima!</p>
+            <h2 class="slider__caption">Testimonial</h2>
+            <p class="slider__txt">Coming Soon</p>
           </div>
         </div>
       </div>
