project landing page update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </section>
       <section class="trove_project">
           <h3>Trove Project</h3>
-          <p>This is the cloud storage project I created.</p>
+          <p>"Trove" is my design for a new cloud storage application that incorporates both storage and user collaboration.</p>
           <a href="/project.html" target="_blank" class="button">Case study</a>
             </section>
           <aside class="trove">
@@ -72,12 +72,12 @@
        </aside>
       <section class="blocjams_project">
           <h3>Bloc Jams Project</h3>
-          <p>This is the music player application I created.</p>
+          <p>"Bloc Jams" is a music player application I coded in both JavaScript and JQuery.</p>
           <a href="" target="_blank" class="button">View</a>
       </section>
       <section class="busybus_project">
           <h3>Busy Bus Project</h3>
-          <p>This is the transportation application I created.</p>
+          <p>"Busy Bus" is my design for a new mobile transportation application that helps bus route information for users.</p>
           <a href="" target="_blank" class="button">View</a>
       </section>
       <aside class="busy">
