--- a/project.html
+++ b/project.html
@@ -51,7 +51,8 @@
   <div class="main">
     <section class="summary">
       <h2>Summary:</h2>
-      <p>In the ever-expanding cloud storage marketplace, something was missing. Users wanted the ability to collaborate with each other in real-time on projects. My goal was to take some of the best aspects of current cloud storage
+      <p>In the ever-expanding cloud storage marketplace, something was missing. Users wanted the ability to collaborate with each other in real-time on projects.
+        My goal was to take some of the best aspects of current cloud storage
       and organization applications and inject them with a sense of social networking.</p>
       </section>
     <section class="problem">
@@ -60,12 +61,15 @@
      </section>
     <section class="solution">
       <h2>The Solution:</h2>
+      <br>
       <img src="images/trovemockup.png" alt="trove mockup" class="center">
+      <br>
     </section>
     <!-- discovery -->
     <section class="discovery">
       <h2>Discovery Phase:</h2>
-      <p>Before beginning the design process, I needed to gather information about how users felt about their current cloud application, the way they use them, and the features they would most like to see in future applications.</p>
+      <p>Before beginning the design process, I needed to gather information about how users felt about their current cloud application, the way they use them,
+         and the features they would most like to see in future applications.</p>
         <aside>
         <img src="images/trovesurvey.png" alt="user survey image" class="center">
         <a href="https://docs.google.com/spreadsheets/d/10zVRX0QJES3QO5b5i8qLSpEJfG0i6YERuytIaujhMF0/edit?usp=sharing" target="_blank" class="button">View more</a>
@@ -73,9 +77,12 @@
      </section>
     <section>
       <h2>Competitive Analysis:</h2>
-        <p>Google Drive:<br> Google has many products to offer its users through its Drive platform. They have built-in templates for surveys, documents, spreadsheets,  and presentations. They also provide several tools for users to edit content with.
-        <br>Dropbox:<br> Dropbox is available on multiple platforms, IOS, Android, and Office 365 applications. The application also has the option of administration control for business users.<br>Pinterest:<br> Pinterest allows users to “Pin”
-         images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless scrolling of interests the user choses. </p>
+        <p><span style="font-weight: bold">Google Drive:</span><br> Google has many products to offer its users through its Drive platform. They have built-in templates for surveys, documents, spreadsheets,
+           and presentations. They also provide several tools for users to edit content with.
+        <br><span style="font-weight: bold">Dropbox:</span><br> Dropbox is available on multiple platforms, iOS, Android, and Office 365 applications. The application also has the option of administration control for
+         business users.<br><span style="font-weight: bold">Pinterest:</span><br> Pinterest allows users to “Pin”
+         images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless
+          scrolling of interests the user choses. </p>
           <img src="images/googledrivre.png"  alt="google drive image" class="center"><br>
           <img src="images/dropbox.png"  alt="dropbox image" class="center"><br>
           <img src="images/pinterest.png"  alt="pinterest image" class="center"><br>
@@ -83,6 +90,7 @@
      </section>
     <section>
       <h2>User Personas:</h2>
+        <br>
         <img src="images/user1.png" alt="user persona image" class="center">
         <p>The first user persona represents a user who is interested in using the application for work related activities, for example sharing content and ideas with colleagues</p>
         <img src="images/user2.png" alt="user persona image" class="center">
@@ -92,13 +100,15 @@
     <!-- info architecture -->
     <section>
       <h2>Information Architecture:</h2>
-      <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories based off the data from the user survey responses, the competitive analysis and the user personas.
+      <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories based off the data from the user survey responses,
+        the competitive analysis and the user personas.
         I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.</p>
       <img src="images/userstories.png" alt="user stories image" class="center">
       <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
      </section>
     <section>
       <h2>User Flows:</h2>
+        <br>
         <img src="images/userflow1.png" alt="user flows image" class="user">
         <img src="images/userflow2.png" alt="user flows image" class="user">
         <img src="images/userflow3.png" alt="user flows image" class="user">
@@ -134,29 +144,37 @@
        </section>
     <section>
       <h2>Usability Tests:</h2>
-      <p>From the feedback that I received, it seems like the idea and foundation behind the site have come together, but the fonts and icons used could be more consistent and user-friendly.</p>
+      <p>The second round of usability tests provided insight into further improvements I could make to the application. I conducted this test with three users.
+        From the feedback that I received, it seems like the idea and foundation behind the site have come together, but the fonts and icons used could be more consistent and user-friendly.</p>
        </section>
     <section>
       <h2>Preference Tests:</h2>
-      <p>I conducted a preference test for three different elements in my design.83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
+      <p>I conducted a preference test for three different elements in my design.<br>The first element was the background color for the log-in screen. Users preferred  a neutral background to a white background.
+          <br>The second element was the header typography. The header font would now be Cinzel Decorative and I would pair that with Muli and Muli Semibold in black.
+          <br>The third element I tested was the size of the action buttons on the login and sign up pages.
+          83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
       <img src="images/surveygraph.png" alt="preference graph" class="graph">
       </section>
-
     <!-- final project -->
+    <section>
+      <h2>Final Design:</h2>
+      <br>
+      <img src="images/landingpage.png" alt="trove landing page" class="trove_landing">
+      <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View prototype</a>
+    </section>
+    <!-- conclusion -->
     <section>
       <h2>Conclusion:</h2>
       <p>Trove is the next step in content storage and organization. Trove presents an opportunity for both casual consumers and businesses to benefit from user-friendly organization, content
           creation and collaboration tools. </p>
       </section>
     </div>
-
     <!-- connect with me -->
       <section class="connect">
          <h3>Connect with me:</h3>
          <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
          <a href="/contact.html" class="button">Message me</a>
        </section>
-
     <!-- footer -->
     <footer>
       <ul class="socialmedia">
