--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
-<link rel="stylesheet" type="text/css" href="reset.css">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 <!-- googlefonts -->
@@ -51,34 +51,18 @@
        </section>
     <div class="main">
     <!-- main content -->
-        <aside class="cap">
-        <img src="images/iphone1.png" class="cappic" alt="capstone project mockup photo">
-        </aside>
-        <section class="capstone_project">
-          <h3>Capstone Project</h3>
-          <p>This is a summary of my capstone project.</p>
-          <a href="" target="_blank" class="button">Case study</a>
-      </section>
+      <aside class="trove">
+        <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo">
+      </aside>
       <section class="trove_project">
           <h3>Trove Project</h3>
           <p>"Trove" is my design for a new cloud storage application that incorporates both storage and user collaboration.</p>
           <a href="/project.html" target="_blank" class="button">Case study</a>
             </section>
-          <aside class="trove">
-            <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo">
-          </aside>
-        <aside class="bloc">
-         <img src="images/iphone3.png" class="blocpic" alt="bloc jams project mockup photo">
-       </aside>
-      <section class="blocjams_project">
-          <h3>Bloc Jams Project</h3>
-          <p>"Bloc Jams" is a music player application I coded in both JavaScript and JQuery.</p>
-          <a href="" target="_blank" class="button">View</a>
-      </section>
       <section class="busybus_project">
           <h3>Busy Bus Project</h3>
-          <p>"Busy Bus" is my design for a new mobile transportation application that helps bus route information for users.</p>
-          <a href="" target="_blank" class="button">View</a>
+          <p>"Busy Bus" is my design for a new mobile transportation application that helps users find bus route information.</p>
+          <a href="/busybus.html" target="_blank" class="button">Case study</a>
       </section>
       <aside class="busy">
         <img src="images/iphone4.png" class="busypic" alt="busybus mockup photo">
