--- a/project.html
+++ b/project.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Imani Ricks | Portfolio</title>
 <!-- stylesheet -->
-<link rel="stylesheet" type="text/css" href="reset.css">
-<link rel="stylesheet" type="text/css" href="project.css">
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+<link rel="stylesheet" type="text/css" href="css/project.css">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 <!-- googlefonts -->
@@ -42,7 +42,7 @@
     <br>
     <br>
     <h1>Trove</h1>
-    <img class="hero" src="images/troveblue.png" alt="trove mockup image" class="troveblue">
+    <img class="hero" src="images/trove/troveblue.png" alt="trove mockup image" class="troveblue">
     <p>Trove is a cloud storage application that combines<br> storage and organization with real-time<br> collaboration.<p>
     <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View finished prototype</a>
   </section>
@@ -51,7 +51,8 @@
   <div class="main">
     <section class="summary">
       <h2>Summary:</h2>
-      <p>In the ever-expanding cloud storage marketplace, something was missing. Users wanted the ability to collaborate with each other in real-time on projects.
+      <p>In the ever-expanding cloud storage marketplace, something was missing.
+        Users wanted the ability to collaborate with each other in real-time on projects.
         My goal was to take some of the best aspects of current cloud storage
       and organization applications and inject them with a sense of social networking.</p>
       </section>
@@ -62,7 +63,7 @@
     <section class="solution">
       <h2>The Solution:</h2>
       <br>
-      <img src="images/trovemockup.png" alt="trove mockup" class="center">
+      <img src="images/trove/trovemockup.png" alt="trove mockup" class="center">
       <br>
     </section>
     <!-- discovery -->
@@ -71,64 +72,67 @@
       <p>Before beginning the design process, I needed to gather information about how users felt about their current cloud application, the way they use them,
          and the features they would most like to see in future applications.</p>
         <aside>
-        <img src="images/trovesurvey.png" alt="user survey image" class="center">
+        <img src="images/trove/trovesurvey.png" alt="user survey image" class="center">
         <a href="https://docs.google.com/spreadsheets/d/10zVRX0QJES3QO5b5i8qLSpEJfG0i6YERuytIaujhMF0/edit?usp=sharing" target="_blank" class="button">View more</a>
         </aside>
      </section>
     <section>
       <h2>Competitive Analysis:</h2>
-        <p><span style="font-weight: bold">Google Drive:</span><br> Google has many products to offer its users through its Drive platform. They have built-in templates for surveys, documents, spreadsheets,
-           and presentations. They also provide several tools for users to edit content with.
-        <br><span style="font-weight: bold">Dropbox:</span><br> Dropbox is available on multiple platforms, iOS, Android, and Office 365 applications. The application also has the option of administration control for
-         business users.<br><span style="font-weight: bold">Pinterest:</span><br> Pinterest allows users to “Pin”
+        <p><span style="font-weight: bold">Google Drive:</span><br> Google has many products to offer its users through its Drive platform.
+          They have built-in templates for surveys, documents, spreadsheets,
+           and presentations. They also provide several tools for users to edit content with.</p>
+           <img src="images/trove/googledrivre.png"  alt="google drive image" class="center"><br>
+        <br><p><span style="font-weight: bold">Dropbox:</span><br> Dropbox is available on multiple platforms, iOS, Android, and Office 365 applications.
+          The application also has the option of administration control for
+         business users.</p>
+         <img src="images/trove/dropbox.png"  alt="dropbox image" class="center"><br>
+         <br><p><span style="font-weight: bold">Pinterest:</span><br> Pinterest allows users to “Pin”
          images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless
-          scrolling of interests the user choses. </p>
-          <img src="images/googledrivre.png"  alt="google drive image" class="center"><br>
-          <img src="images/dropbox.png"  alt="dropbox image" class="center"><br>
-          <img src="images/pinterest.png"  alt="pinterest image" class="center"><br>
+          scrolling. </p>
+          <img src="images/trove/pinterest.png"  alt="pinterest image" class="center"><br>
           <a href="https://docs.google.com/document/d/1xJg4TUPONXPYxAXBafxe4DKsNYSO1RyiBYnhi0jO21c/edit?usp=sharing" target="_blank" class="button">View more</a>
      </section>
     <section>
       <h2>User Personas:</h2>
-        <br>
-        <img src="images/user1.png" alt="user persona image" class="center">
         <p>The first user persona represents a user who is interested in using the application for work related activities, for example sharing content and ideas with colleagues</p>
-        <img src="images/user2.png" alt="user persona image" class="center">
+        <img src="images/trove/user2.png" alt="user persona image" class="center">
         <p>The second user persona represents a user who uses our application for school and personal use. This user is invested in collaborating with classmates, group mates, and friends. </p>
+        <img src="images/trove/user1.png" alt="user persona image" class="center">
        </section>
 
     <!-- info architecture -->
     <section>
       <h2>Information Architecture:</h2>
-      <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories based off the data from the user survey responses,
+      <p>After gathering the initial research, I began working on how to structure of the content of the application. I started by creating users stories
+        based off the data from the user survey responses,
         the competitive analysis and the user personas.
         I compiled a list of tasks that Trove users would want to complete and rated them from high to low priority.</p>
-      <img src="images/userstories.png" alt="user stories image" class="center">
+      <img src="images/trove/userstories.png" alt="user stories image" class="center">
       <a href="https://drive.google.com/open?id=1S1gUj6Uu6P7MTHY5k8NGzSel-ztqAYu9XA4h4HjIeaM" target="_blank" class="button">View more</a>
      </section>
     <section>
       <h2>User Flows:</h2>
         <br>
-        <img src="images/userflow1.png" alt="user flows image" class="user">
-        <img src="images/userflow2.png" alt="user flows image" class="user">
-        <img src="images/userflow3.png" alt="user flows image" class="user">
+        <img src="images/trove/userflow1.png" alt="user flows image" class="user">
+        <img src="images/trove/userflow2.png" alt="user flows image" class="user">
+        <img src="images/trove/userflow3.png" alt="user flows image" class="user">
         <a href="https://paper.dropbox.com/doc/User-Flows-2--AzATkSmnmO6PDH21JKlk~FRZAQ-hAYhkSMHhNcfglCncnUa8" target="_blank" class="button">View more</a>
       </section>
     <section class="wireframes">
       <h2>Wireframes:</h2>
-      <p>Combining information from my competitive analysis and my user surveys, I was able to mockup what I would like my final application to look like. </p>
-      <img src="images/wireframe2.png" alt="wireframe image" class="wireframeimage">
+      <p>Combining information from my competitive analysis and my user surveys, I was able to outline what I would like my application to look like. </p>
+      <img src="images/trove/wireframe2.png" alt="wireframe image" class="wireframeimage">
       <a href="https://invis.io/4UWRY15XM9Q" target="_blank" class="button">View more</a>
        </section>
     <section>
       <h2>Branding and Identity:</h2>
-      <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. We started by thinking of the consumer’s content as actual treasure. This helped
-         create the concept of the treasure chest.<br>Brand mood: New, bright, creative, clean and crisp.</p>
-      <img src="images/trovesketch.png" alt="trove sketches" class="sketch">
+      <p>The concept for Trove came from wanting to convey a sense of security and stability to consumers. I started by thinking of the consumer’s content as actual treasure. This helped
+         create the concept of the treasure chest.<br><br>Brand mood: New, bright, creative, clean and crisp.</p>
+      <img src="images/trove/trovesketch.png" alt="trove sketches" class="sketch">
       <p>Once I knew I wanted to go in a treasure chest/nautical theme, I started to gather inspiration from around the web. Colors that are featured in the mood board (brown, orange, gold, blue
          and teal) were the foundational pieces for the finished app.</p>
-      <img src="images/moodboard1.png" alt="trove moodboard" class="mood">
-      <img src="images/moodboard2.png" alt="trove moodboard" class="mood">
+      <img src="images/trove/moodboard1.png" alt="trove moodboard" class="mood">
+      <img src="images/trove/moodboard2.png" alt="trove moodboard" class="mood">
        </section>
     <section>
       <h2>Usability Tests:</h2>
@@ -139,7 +143,7 @@
     <section class="mockups">
       <h2>Mockups:</h2>
       <p>After the feedback from the usability tests, I was able to create high fidelity mockups of my final application.</p>
-      <img src="images/mockup1.png" alt="mockup image" class="mockupimage">
+      <img src="images/trove/mockup1.png" alt="mockup image" class="mockupimage">
       <a href="https://invis.io/NCW1U5L2J8B" target="_blank" class="button">View more</a>
        </section>
     <section>
@@ -149,23 +153,26 @@
        </section>
     <section>
       <h2>Preference Tests:</h2>
-      <p>I conducted a preference test for three different elements in my design.<br>The first element was the background color for the log-in screen. Users preferred  a neutral background to a white background.
-          <br>The second element was the header typography. The header font would now be Cinzel Decorative and I would pair that with Muli and Muli Semibold in black.
-          <br>The third element I tested was the size of the action buttons on the login and sign up pages.
-          83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
-      <img src="images/surveygraph.png" alt="preference graph" class="graph">
+      <p>I conducted a preference test for three different elements in my design.
+        The first element was the background color for the log-in screen.The feedback that I recieved was that users preferred a neutral background to a white background.
+        Users also preferred a Cinzel Decorative/Muli font pairing.
+        Finally, users preferred wider width CTA buttons on the login and sign up pages.</p>
+
+      <img src="images/trove/surveygraph.png" alt="preference graph" class="graph">
+        <p>83% of user preferred a the log-in screen with a neutral background compared to a log-in screen with a colored background.</p>
       </section>
     <!-- final project -->
     <section>
       <h2>Final Design:</h2>
       <br>
-      <img src="images/landingpage.png" alt="trove landing page" class="trove_landing">
+      <img src="images/trove/landingpage.png" alt="trove landing page" class="trove_landing">
       <a href="https://invis.io/WDW7L578ZBC" target="_blank" class="button">View prototype</a>
     </section>
     <!-- conclusion -->
     <section>
       <h2>Conclusion:</h2>
-      <p>Trove is the next step in content storage and organization. Trove presents an opportunity for both casual consumers and businesses to benefit from user-friendly organization, content
+      <p>Trove is the next step in content storage and organization. Trove presents an opportunity for both casual consumers and businesses to benefit
+        from user-friendly organization, content
           creation and collaboration tools. </p>
       </section>
     </div>
