project css updates

--- a/busybus.html
+++ b/busybus.html
@@ -43,7 +43,7 @@
     <br>
     <h1>BusyBus</h1>
     <img src="images/busybus/yellowbus.png" alt="mockup image" class="hero" >
-    <p>BusyBus is a mobile transportation application designed to help users<br>navigate over-complicated transit systems.<p>
+    <p>BusyBus is a mobile transportation application designed<br> to help users navigate over-complicated<br>transit systems.<p>
     <a href="" target="_blank" class="button">View finished prototype</a>
   </section>
     <!-- summary and solution-->
