--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
      <br>
      <br>
 		   <h1>Hi, I'm Imani.</h1>
-		     <h4> I’m a UX Designer located in Charlotte, NC.<br>I have a passion for building satisfying<br>user experiences.</h4>
+		     <p>UX/UI Designer | Charlotte, NC<br>I have a passion for building satisfying<br>user experiences.</p>
          <a href="about-me.html" class="button">About me</a>
          <a href="#main" class="button">My work</a><br>
-         <i class="fas fa-angle-double-down fa-2x"></i>
        </section>
+   <!-- main content -->
     <div class="main">
-    <!-- main content -->
+      <h3>My Work:</h3>
       <aside class="trove">
         <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo">
       </aside>
       <section class="trove_project">
-          <h3>Trove Project</h3>
+          <h4>Trove Project</h4>
           <p>"Trove" is my design for a new cloud storage application that incorporates both storage and user collaboration.</p>
           <a href="/project.html" target="_blank" class="button">Case study</a>
             </section>
       <section class="busybus_project">
-          <h3>Busy Bus Project</h3>
+          <h4>Busy Bus Project</h4>
           <p>"Busy Bus" is my design for a new mobile transportation application that helps users find bus route information.</p>
           <a href="/busybus.html" target="_blank" class="button">Case study</a>
       </section>
@@ -72,7 +72,7 @@
       <section class="design_process">
           <br>
           <br>
-          <h3>My Design Process</h3>
+          <h3>My Design Process:</h3>
 
           <aside class="designpic">
           <img class="design" src="images/designprocess.svg" alt="design process image">
