--- a/index.html
+++ b/index.html
@@ -43,37 +43,40 @@
      <br>
      <br>
      <br>
-		   <h1>Hi, I'm Imani.</h1>
-		     <p>UX/UI Designer | Charlotte, NC<br>I have a passion for building satisfying<br>user experiences.</p>
-         <a href="about-me.html" class="button">About me</a>
-         <a href="#main" class="button">My work</a><br>
+		   <h1>Imani Ricks</h1>
+		     <p>UX/UI Designer | Charlotte, NC</p>
+         <i class="fas fa-angle-double-down fa-2x"></i>
        </section>
    <!-- main content -->
     <div class="main">
-      <h3>My Work:</h3>
+      <div class="project1">
+      <h3>My Work</h3>
       <aside class="trove">
         <img src="images/iphone2.png" class="trovepic" alt="trove mockup photo">
       </aside>
       <section class="trove_project">
           <h4>Trove Project</h4>
-          <p>"Trove" is my design for a new cloud storage application that incorporates both storage and user collaboration.</p>
+          <p>"Trove" is my design for a new cloud storage application<br> that incorporates both storage and user collaboration.</p>
           <a href="/project.html" target="_blank" class="button">Case study</a>
             </section>
+        </div>
+       <div class="project2">
       <section class="busybus_project">
           <h4>Busy Bus Project</h4>
-          <p>"Busy Bus" is my design for a new mobile transportation application that helps users find bus route information.</p>
+          <p>"Busy Bus" is my design for a new mobile transportation<br> application that helps users find bus route information.</p>
           <a href="/busybus.html" target="_blank" class="button">Case study</a>
       </section>
       <aside class="busy">
         <img src="images/iphone4.png" class="busypic" alt="busybus mockup photo">
         </aside>
+       </div>
       </div>
+
      <!-- designprocess -->
       <section class="design_process">
           <br>
           <br>
-          <h3>My Design Process:</h3>
-
+          <h3>My Design Process</h3>
           <aside class="designpic">
           <img class="design" src="images/designprocess.svg" alt="design process image">
            </aside>
@@ -81,7 +84,7 @@
 
       <!-- testimonials -->
       <section class="testimonials">
-      <h3>What people say about me:</h3>
+      <h3>What people say about me</h3>
       <div class="slider">
         <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
         <input type="radio" name="slider" title="slide2" class="slider__nav"/>
@@ -107,9 +110,10 @@
         </div>
       </div>
   </section>
+
  <!-- connect with me -->
    <section class="connect">
-      <h3>Connect with me:</h3>
+      <h3>Connect with me</h3>
       <p>Thanks for stopping by.<br>Please reach out if you want to chat or have<br>any questions!</p>
       <a href="/contact.html" class="button">Message me</a>
     </section>
