--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <!-- stylesheet -->
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="icon" href="favicon.ico">
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/84aa5f5e2b.js" crossorigin="anonymous"></script>
 <!-- googlefonts -->
