project paragraph update

--- a/project.html
+++ b/project.html
@@ -78,15 +78,15 @@
      </section>
     <section>
       <h2>Competitive Analysis:</h2>
-        <p><span style="font-weight: bold">Google Drive:</span><br> Google has many products to offer its users through its Drive platform.
+        <p>Google has many products to offer its users through its Drive platform.
           They have built-in templates for surveys, documents, spreadsheets,
            and presentations. They also provide several tools for users to edit content with.</p>
            <img src="images/trove/googledrivre.png"  alt="google drive image" class="center"><br>
-        <br><p><span style="font-weight: bold">Dropbox:</span><br> Dropbox is available on multiple platforms, iOS, Android, and Office 365 applications.
+        <br><p> Dropbox is available on multiple platforms, iOS, Android, and Office 365 applications.
           The application also has the option of administration control for
          business users.</p>
          <img src="images/trove/dropbox.png"  alt="dropbox image" class="center"><br>
-         <br><p><span style="font-weight: bold">Pinterest:</span><br> Pinterest allows users to “Pin”
+         <br><p> Pinterest allows users to “Pin”
          images or ideas they find on websites to their boards. They also provide users with similar ideas to pins they have already chosen. Pinterest’s platform allows for endless
           scrolling. </p>
           <img src="images/trove/pinterest.png"  alt="pinterest image" class="center"><br>
